# holdfastprotocol

./: .env.local.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  cas67_plan.md  current_status.md  demo-script.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  release-manifest.json  tsconfig.json
.github/workflows/: ci.yml  deploy-devnet.yml  devnet-health.yml  rust-coverage.yml  test.yml  ts-coverage.yml  video-remotion.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AlertBanner.tsx  CodePreview.tsx  NotificationCenter.tsx  NotificationContext.tsx  NotificationToast.tsx  WalletProvider.tsx
app/dashboard/: layout.tsx  page.tsx
app/docs/: layout.tsx  page.tsx
app/onboarding/: page.tsx
app/status/: page.tsx
casematelabs/: Casemate Formwork.html  app.jsx  formwork.css  formwork.jsx  index.html  styles.css
docs/: VaultPact_Protocol_Business_Spec_v1.docx  cas127-vaultpact-devnet-launch.md  cas129-elizaos-github-discussion-draft.md  cas131-conference-prep.md  cas132-vouch-positioning.md  cas133-sak-integration-proposal.md  cas296-speaker-pitch-deck.md  cas405-escrow-operator-ux-modes.md  cas459-timed-escrow-keeper-spec.md  cas468-holdfast-one-pager.html  escrow-idl-reference.md  holdfast-devnet-launch.md  holdfast-pitch-deck-aiagentconf-2026.pptx  invariants.md  qa-cas61-website-messaging-audit.md  registeragentwallet-devnet-tutorial.md  release-manifest-mapping.md  reputation-composability.md  sdk-reference.md
docs/archive/: cas127-vaultpact-devnet-launch.md  crisis-communication-playbook.md
docs/dev/: architecture.md  cas155-register-agent-wallet.md  cas63-canonical-quickstart-consolidation.md  escrow-idl-reference.md  invariants.md  phase2-technical-deepdive.md  quickstart.md  registeragentwallet-devnet-tutorial.md  reputation-composability.md  sdk-reference.md
docs/operations/: CRISIS_COMMUNICATION_PLAYBOOK.md  analytics-event-tracking-setup.md  cas-66-e2e-proof-artifact-runbook.md  cas470-discord-setup-runbook.md  launch-day-sop.md  launch-monitoring-templates.md  launch-readiness-pre-check.md
docs/outreach/: CEO_LAUNCH_TALKING_POINTS.md  cas129-shaw-dm-draft.md  cas130-olas-partnership-proposal.md  cas296-speaker-pitch-deck.md  cas375-colosseum-outreach.md  cas46-draft-post.md  demo-script.md  ecosystem-partnership-outreach.md  holdfast-devnet-launch.md
docs/proposals/: elizaos-onchain-programs-rfc.md
docs/strategy/: cas133-sak-integration-proposal.md  cas296-ceo-review-brief.md
examples/holdfast-quickstart/: .gitignore  (+4 more)
holdfast/: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  TEST_SETUP.md  Trident.toml  audit-report-2026-04-26.md  package-lock.json  package.json  tarpaulin.toml  tsconfig.json
holdfast/fuzz/: Cargo.toml
holdfast/fuzz/fuzz_targets/: fuzz_challenge.rs  fuzz_decay.rs  fuzz_init_params.rs  fuzz_payout.rs  fuzz_webauthn.rs
holdfast/programs/vaultpact/: Cargo.toml
holdfast/programs/vaultpact-escrow/: Cargo.toml
holdfast/programs/vaultpact-escrow/src/: cpi_helpers.rs  errors.rs  lib.rs
holdfast/programs/vaultpact-escrow/src/instructions/: auto_release.rs  cancel_pending_escrow.rs  claim_released.rs  close_escrow.rs  deposit_funds.rs  escalate_dispute.rs  initialize_escrow.rs  lock_escrow.rs  mod.rs  mutual_cancel_escrow.rs  protocol_freeze_pact.rs  raise_dispute.rs  refund.rs  release_escrow.rs  resolve_dispute.rs  stake_beneficiary.rs
holdfast/programs/vaultpact-escrow/src/state/: dispute_record.rs  escrow_account.rs  mod.rs  pact_record.rs
holdfast/programs/vaultpact/src/: lib.rs
holdfast/trident-tests/fuzz_tests/fuzz_0/: Cargo.toml
holdfast/trident-tests/fuzz_tests/fuzz_0/src/: main.rs
holdfast/trident-tests/fuzz_tests/fuzz_1/: Cargo.toml
holdfast/trident-tests/fuzz_tests/fuzz_1/src/: main.rs
lib/: create-pact-step4.test.ts  dashboard-hub.test.ts  indexer.test.ts  indexer.ts  model-router.test.ts  model-router.ts  orchestrator-heartbeat.test.ts  orchestrator-heartbeat.ts  orchestrator-router.e2e.test.ts  orchestrator-router.ts  release-manifest.ts
public/: site.webmanifest
scripts/: README-perplexity-search.md  build_pitch_deck.py  cas438-done.js  cas438-done.py  cas438-update.ps1  check-quickstart-drift.sh  devnet-health-check.sh  fix-routine-minor-items.py  hol134-ux-snapshot.md  paperclip-issue-update.sh  patch_issue.py  perplexity-search.py  perplexity-search.sh  pm_comments.py  qmd-query.sh  update-routine-goals.py  upload_script.py
video/: README.md  package-lock.json  package.json
wireframes/: brand-guide.html  cas-152-dispute-resolution.html  cas-319-emergency-recovery.html  cas-323-escrow-activity-advanced.html  cas-324-reputation-enhancements.html  cas-325-brand-assets.html  cas-325-og-image.html  cas-72-reputation-score.html  cas-73-escrow-activity-feed.html  cas-74-custody-monitoring.html  cas-75-protocol-health-status.html  cas-78-agent-registration.html  design-tokens.html  hol-124-onboarding-dashboard.html
(+236 files in other folders)
