[package]
name = "holdfast-escrow"
version = "0.1.0"
description = "Holdfast Escrow Engine — trustless pact escrow for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaultpact_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
fuzz-helpers = ["vaultpact/fuzz-helpers"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
vaultpact = { path = "../vaultpact", package = "holdfast", features = ["cpi"] }
