[package]
name = "holdfast"
version = "0.1.0"
description = "Holdfast Protocol — trust infrastructure for autonomous AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaultpact"

[features]
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
fuzz-helpers = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
